@@ -4,6 +4,7 @@ CHANGES-1.4.txt
 CHANGES IN CUPS V1.4.4
 
 	- Documentation updates (STR #3453, STR #3527, STR #3528, STR #3529)
+	- Added additional validation checks for the 1284 device ID (STR #3534)
 	- Fixed a problem with the RPM spec file (STR #3544)
 	- The lpstat command did not limit the job list to the specified
 	  printers (STR #3541)
